# auto-fault-tc-gen

./: .gitignore  README.md  pyproject.toml  requirements.in
data/: examples.xlsx  requirements.xlsx
notebooks/: .env.template  chat_analysis.ipynb  experiment_all_single.ipynb  experiment_all_single_drop_sensor.ipynb  experiment_bulk.ipynb  experiment_single_drop_sensor.ipynb  results_analysis_instance.ipynb  results_analysis_single.ipynb
results/: bulk-2_gpt-4o-mini_n-1_acc-0.89_11.04.2024-13:16:25.json  bulk-3_gpt-4o-mini_n-1_acc-0.844_11.04.2024-13:13:11.json  bulk-3_gpt-4o-mini_n-1_acc-0.867_11.04.2024-13:12:14.json  bulk-5_gpt-4o-mini_n-1_acc-0.837_11.04.2024-13:14:24.json  bulk-8_gpt-4o-mini_n-1_acc-0.824_11.04.2024-13:14:54.json  single_dropped_gpt-4o-mini_n-1-neg-0_acc-0.766_(ST)_11.04.2024-14:49:14.json  single_dropped_gpt-4o-mini_n-1-neg-2_acc-0.854_(ST)_11.04.2024-13:59:32.json  single_dropped_gpt-4o-mini_n-1-neg-2_acc-0.854_(YR_ST)_11.04.2024-13:43:37.json  single_dropped_gpt-4o-mini_n-1-neg-2_acc-0.898_(WSA_ST)_11.07.2024-12:47:08.json  single_gpt-4o-mini_n-1_acc-0.934_10.31.2024-14:30:19.json  single_gpt-4o-mini_n-3_acc-0.854_11.04.2024-12:22:01.json  single_gpt-4o-mini_n-3_acc-0.905_11.04.2024-13:06:59.json  single_gpt-4o-mini_n-5_acc-0.905_11.04.2024-12:31:38.json  single_gpt-4o-mini_n-8_acc-0.905_11.04.2024-12:49:27.json  single_llama-3.2-11b-text-preview_n-1_acc-0.861_11.06.2024-22:05:42.json  single_llama-3.2-3b-preview_n-1_acc-0.599_10.31.2024-15:19:09.json  single_llama-3.2-90b-text-preview_n-1_acc-0.876_11.06.2024-19:54:04.json  (+1 more)
(+7 files in other folders)
